--- a/popup.html
+++ b/popup.html
@@ -12,11 +12,13 @@
       padding: 10px;
       font-size: 16px;
       cursor: pointer;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
-  <button id="applyBionic">Apply Bionic Reading</button>
+  <button id="applyBionic">Apply Bionic Reading to Selection</button>
+  <button id="applyBionicToArticles">Apply Bionic Reading to Articles</button>
   <script src="popup.js"></script>
 </body>
 </html>
